--- a/src/app.html
+++ b/src/app.html
@@ -22,11 +22,11 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="/arsh.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	%svelte.head%
+	%sveltekit.head%
 </head>
 
 <body id="body" class="light">
-	<div id="svelte">%svelte.body%</div>
+	<div id="svelte">%sveltekit.body%</div>
 </body>
 
 </html>
